# click-translate

./: .gitignore  Makefile  README.md  folder-alias.json  manifest.config.ts  package-lock.json  package.json
backend/: main.py  pyproject.toml  start.sh  supervisord.conf
backend/controller/: userController.py
backend/docs/: relay_chat_completions.curl
backend/models/: user.py
backend/sqls/: user.sql
backend/utils/: db.py
docs/: 初始化流程.md  后端实现.md
htmls/: click-translate-privacy-terms.html  click-translate-user-terms.html
src/: background.ts  i18n.ts  store.ts
src/api/: chat.ts  click_translate.tsx  customAI.tsx  deepSeek.tsx  gemini.ts  moonShot.ts  wenxin.ts
src/components/: CardDragableWrapper.tsx  CardFooter.tsx  ExternalLink.tsx  SearchResult.tsx  Toast.tsx  Translate.tsx  TriggerIcon.tsx  Word.tsx  WordChat.tsx
src/contentScript/: index.tsx  lingoCard.tsx
src/pages/options/: enginsSetting.tsx  externalLiks.tsx  main.tsx  options.tsx  other.tsx  sentenceEngine.tsx  sidebar.tsx  wordEngine.tsx
src/storage/: local.ts
src/types/: index.ts
src/utils/: const.ts  index.ts  translate.ts  youdaoParser.ts
